source/blender/makesdna/DNA_scene_types.h
@@ -1245,6 +1245,8 @@ typedef struct Scene {
 	/* use preview range */
 #define SCER_PRV_RANGE	(1<<0)
 #define SCER_LOCK_FRAME_SELECTION	(1<<1)
+	/* timeline/keyframe jumping - only selected items (on by default) */
+#define SCE_KEYS_NO_SELONLY	(1<<2)
 
 /* mode (int now) */
 #define R_OSA			0x0001
