release/scripts/startup/bl_ui/space_time.py
@@ -122,6 +122,7 @@ class TIME_MT_view(Menu):
     def draw(self, context):
         layout = self.layout
 
+        scene = context.scene
         st = context.space_data
 
         layout.prop(st, "show_seconds")
@@ -130,7 +131,7 @@ class TIME_MT_view(Menu):
         layout.separator()
 
         layout.prop(st, "show_frame_indicator")
-        layout.prop(st, "show_only_selected")
+        layout.prop(scene, "show_keys_from_selected_only")
 
         layout.separator()
 
